fixed delelte all buuton alignment

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
 
-.wrapper{
+.wrapper {
   width: 100%;
   height: 100vh;
   overflow-x: hidden;
@@ -20,33 +20,38 @@
   background-color: #f8f8ff;
 }
 
-
-.wrapper h1{
+.wrapper h1 {
   font-weight: 700;
   color: #a4adff;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
-.custom-form{
+.custom-form {
   width: 500px;
   height: auto;
   margin: 20px auto;
 }
 
-.input-and-btn{
+.input-and-btn {
   display: flex;
   gap: 4px;
 }
 
-.input-and-btn input{
+.input-and-btn input {
   padding: 12px;
 }
 
-.input-and-btn button{
+.input-and-btn button {
   padding-inline: 1.2rem;
 }
 
-.todo-box{
+.todo-box {
   width: 450px;
   margin: 0 auto;
   display: flex;
@@ -59,59 +64,55 @@
   border-radius: 8px;
 }
 
-.todo-box .content{
+.todo-box .content {
   display: flex;
   gap: 12px;
-
 }
 
-.todo-box .content p{
+.todo-box .content p {
   margin-top: -6px;
   margin-left: 6px;
 }
 
-.todo-box .content input{
+.todo-box .content input {
   cursor: pointer;
 }
 
-.todo-box span{
+.todo-box span {
   margin: 0 5px;
 }
 
-.delete-all{
+.delete-all {
   width: 400px;
   margin-top: 14px;
 }
 
-.actions-box{
+.actions-box {
   cursor: pointer;
 }
 
-.actions-box span{
+.actions-box span {
   background-color: white;
   padding: 2px 6px;
   border-radius: 4px;
 }
 
-.back-btn{
+.back-btn {
   margin-top: 5px;
   width: 100%;
 }
 
-
 @media (max-width: 550px) {
-  .container{
-    scale: 0.9
+  .container {
+    scale: 0.9;
   }
 
-  
-
-  .custom-form{
+  .custom-form {
     width: 100%;
   }
 
-  .todo-box, .delete-all{
-    width: 90%
+  .todo-box,
+  .delete-all {
+    width: 90%;
   }
-  
 }
